bin_PROGRAMS = bitshred
bitshred_SOURCES = bitshred.c \
                   ccgen.c \
                   ccinit.c \
                   ccrow.c \
                   cccol.c \
                   cccost.c \
                   ccsplit.c \
                   ccpermute.c \
                   bs_common.h bs_common.c

AM_CFLAGS = -Wall -O3 -g -fopenmp
LIBS = -lm
